--- a/views/mail_message_view.xml
+++ b/views/mail_message_view.xml
@@ -7,13 +7,34 @@
         <field name="name">mail_message_read_form</field>
         <field name="model">mail.message</field>
         <field name="inherit_id" ref="mail_full_expand.view" />
+        <!--<field name="inherit_id" ref="mail_full_expand.view" />-->
         <field name="arch" type="xml">
             <group position="before">
                 <header>
-                    <button string="Reply" name="%(mail_forward.compose_action)d" type="action"/>
-                    <button string="Forward" name="%(mail_forward.compose_action)d" type="action"/>
+                    <span class='oe_forward'><a title="Forward" class="oe_e">*</a></span>
+                    <button string="Forward" name="on_message_forward"
+                        type="object"
+                        class="btn-primary">
+                    </button>
+                    <button string="Reply" name="on_message_reply"
+                        type="object"
+                        class="btn-primary">
+                    </button>
                 </header>
             </group>
+            <field name="body" position="after">
+                <notebook>
+                    <page string="childs">
+                        <field name="child_ids"/>
+                    </page>
+                    <page string="parent">
+                        <field name="parent_id"/>
+                    </page>
+                    <!--<page string="Attachments">-->
+                        <!--<field name="attachment_ids"/>-->
+                    <!--</page>-->
+                </notebook>
+            </field>
         </field>
     </record>
 
@@ -92,17 +113,56 @@
         </field>
     </record>
 
+    <!-- To-Do views -->
+    <record id="action_view_myToDo_message" model="ir.actions.act_window">
+        <field name="name">read mail</field>
+        <field name="res_model">mail.message</field>
+        <field name="domain">[('starred', '=', True)]</field>
+        <field name="search_view_id" ref="mymail_message_search"/>
+    </record>
+
+    <record id="action_view_myToDo_message_tree" model="ir.actions.act_window.view">
+        <field eval="1" name="sequence"/>
+        <field name="view_mode">tree</field>
+        <field name="view_id" ref="mymail_message_tree"/>
+        <field name="act_window_id" ref="action_view_myToDo_message"/>
+    </record>
+
+    <record id="action_view_myToDo_message_form" model="ir.actions.act_window.view">
+        <field eval="2" name="sequence"/>
+        <field name="view_mode">form</field>
+        <field name="view_id" ref="mymail_message_form"/>
+        <field name="act_window_id" ref="action_view_myToDo_message"/>
+    </record>
+
+    <!-- To: Me views -->
+    <record id="action_view_myNotification_message" model="ir.actions.act_window">
+        <field name="name">read mail</field>
+        <field name="res_model">mail.message</field>
+        <field name="domain">[('partner_ids.user_ids', 'in', [uid])]</field>
+        <field name="search_view_id" ref="mymail_message_search"/>
+    </record>
+
+    <record id="action_view_myNotification_message_tree" model="ir.actions.act_window.view">
+        <field eval="1" name="sequence"/>
+        <field name="view_mode">tree</field>
+        <field name="view_id" ref="mymail_message_tree"/>
+        <field name="act_window_id" ref="action_view_myNotification_message"/>
+    </record>
+
+    <record id="action_view_myNotification_message_form" model="ir.actions.act_window.view">
+        <field eval="2" name="sequence"/>
+        <field name="view_mode">form</field>
+        <field name="view_id" ref="mymail_message_form"/>
+        <field name="act_window_id" ref="action_view_myNotification_message"/>
+    </record>
+
+    <!-- inbox views -->
     <record id="action_view_mymail_message" model="ir.actions.act_window">
         <field name="name">read mail</field>
         <field name="res_model">mail.message</field>
-        <!--<field name="domain">[('to_read', '=', True), ('starred', '=', False)]</field>-->
+        <field name="domain">[('notification_ids.partner_id.user_ids', 'in', [uid])]</field>
         <field name="search_view_id" ref="mymail_message_search"/>
-        <field name="context">{
-            'default_model': 'res.users',
-            'default_res_id': uid,
-            'thread_model': 'res.partner',
-            'search_default_message_unread': 1
-        }</field>
     </record>
 
     <record id="action_view_mymail_message_tree" model="ir.actions.act_window.view">
@@ -119,6 +179,29 @@
         <field name="act_window_id" ref="action_view_mymail_message"/>
     </record>
 
+    <!-- sent views -->
+    <record id="action_view_mySent_message" model="ir.actions.act_window">
+        <field name="name">read mail</field>
+        <field name="res_model">mail.message</field>
+        <field name="domain">[('author_id.user_ids', 'in', [uid])]</field>
+        <field name="search_view_id" ref="mymail_message_search"/>
+    </record>
+
+    <record id="action_view_mySent_message_tree" model="ir.actions.act_window.view">
+        <field eval="1" name="sequence"/>
+        <field name="view_mode">tree</field>
+        <field name="view_id" ref="mymail_message_tree"/>
+        <field name="act_window_id" ref="action_view_mySent_message"/>
+    </record>
+
+    <record id="action_view_mySent_message_form" model="ir.actions.act_window.view">
+        <field eval="2" name="sequence"/>
+        <field name="view_mode">form</field>
+        <field name="view_id" ref="mymail_message_form"/>
+        <field name="act_window_id" ref="action_view_mySent_message"/>
+    </record>
+
+    <!--preserve original views -->
     <record id="action_view_mail_message_tree" model="ir.actions.act_window.view">
         <field eval="1" name="sequence"/>
         <field name="view_mode">tree</field>
@@ -134,10 +217,12 @@
     </record>
 
     <!-- Add menu entry in Messaging -->
-    <menuitem action="action_view_mymail_message" name="MyInbox" id="menu_mymail_message" sequence='10' parent="mail.mail_feeds" />
+    <menuitem action="action_view_mymail_message" name="Inbox List" id="menu_inbox_list" sequence='10' parent="mail.mail_feeds" />
+    <menuitem action="action_view_myNotification_message" name="To: me List" id="menu_to_me_list" sequence='11' parent="mail.mail_feeds" />
+    <menuitem action="action_view_myToDo_message" name="To-do List" id="menu_to_do_list" sequence='12' parent="mail.mail_feeds" />
+    <menuitem action="action_view_mySent_message" name="Sent List" id="menu_sent_list" sequence='13' parent="mail.mail_feeds" />
 
 </data>
 </openerp>
-
 
  <!--note : voir Wall Widget et  Thread Widget : affichage des emails et sous email-->
