--- a/views/mail_message_view.xml
+++ b/views/mail_message_view.xml
@@ -1,30 +1,52 @@
 <?xml version="1.0"?>
 <openerp>
 <data>
-    <!--ici-->
 
+                    <!--var action = {-->
+                    <!--type: 'ir.actions.act_window',-->
+                    <!--res_model: 'mail.compose.message',-->
+                    <!--view_mode: 'form',-->
+                    <!--view_type: 'form',-->
+                    <!--views: [[false, 'form']],-->
+                    <!--target: 'new',-->
+                    <!--context: context,-->
+                <!--};-->
+    <!-- message form -->
+    <!--<record id="compose_action" model="ir.actions.act_window">-->
+        <!--<field name="name">Forward Email</field>-->
+        <!--<field name="res_model">mail.compose_message</field>-->
+        <!--<field name="src_model">mail.message</field>-->
+        <!--<field name="type">ir.actions.act_window</field>-->
+        <!--&lt;!&ndash;<field name="view_id" ref="compose_form"/>&ndash;&gt;-->
+        <!--<field name="view_type">form</field>-->
+        <!--<field name="view_mode">form</field>-->
+        <!--<field name="target">new</field>-->
+    <!--</record>-->
+
+    <!-- message form -->
     <record model="ir.ui.view" id="mymail_message_form">
         <field name="name">mail_message_read_form</field>
         <field name="model">mail.message</field>
         <field name="inherit_id" ref="mail_full_expand.view" />
-        <!--<field name="inherit_id" ref="mail_full_expand.view" />-->
         <field name="arch" type="xml">
             <group position="before">
                 <header>
-                    <span class='oe_forward'><a title="Forward" class="oe_e">*</a></span>
-                    <button string="Forward" name="on_message_forward"
+                    <button string="Forward" name="on_message_forward2"
                         type="object"
-                        class="btn-primary">
+                        context="{'option':'forward'}">
                     </button>
-                    <button string="Reply" name="on_message_reply"
+                    <button string="Reply" name="on_message_forward2"
                         type="object"
-                        class="btn-primary">
+                        context="{'option':'reply'}">
                     </button>
                 </header>
             </group>
             <field name="notified_partner_ids" position="after">
                 <field name="to_read"/>
                 <field name="starred"/>
+            </field>
+            <field name="subject" position="replace">
+                <h1><field name="subject" readonly="1" placeholder="Subject..."/></h1>
             </field>
             <field name="body" position="after">
                 <notebook>
