dev en cours: - boutton toggle read et starred : read ne fonctionne pas - css de mail wall: affichage plus large

--- a/static/src/css/mymail.css
+++ b/static/src/css/mymail.css
@@ -1,1 +1,7 @@
 .mymailclass [data-field="short_description"]{width: 500px;}
+.openerp .oe_mail_wall .oe_mail {
+    margin: 16px;
+    width: unset;
+    max-width: 100%;
+    display: inline-block;
+}
