--- a/views/assets.xml
+++ b/views/assets.xml
@@ -7,6 +7,12 @@
                 <script type="text/javascript" src="/mymail/static/src/js/mymail.js"/>
             </xpath>
         </template>
+        <template id="mail_wall_layout_" inherit_id="web.layout" name="mymail layout">
+            <xpath expr="html/head" position="inside">
+                <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
+                <link rel="stylesheet" href="/mymail/static/src/css/mymail.css"/>
+            </xpath>
+        </template>
     </data>
 </openerp>
 
