- boutton toggle read et starred - css de mail wall: affichage plus large - ajouter html et image dans le tree view - boutons fonts-awesome pour le form view - liens dans le form view - etc

--- a/static/src/css/mymail.css
+++ b/static/src/css/mymail.css
@@ -1,1 +1,8 @@
-.mymailclass [data-field="short_description"]{width: 500px;}
+.mymailclass [data-field="short_description"]{width: 70%;}
+.mymailclass [data-field="author"]{width: 10%;}
+.openerp .oe_mail_wall .oe_mail {
+    margin: 16px;
+    width: unset;
+    max-width: 100%;
+    display: inline-block;
+}
