--- a/views/mail_message_view.xml
+++ b/views/mail_message_view.xml
@@ -185,9 +185,31 @@
     </field>
 </record>
 
+<!-- inbox views -->
+<record id="action_view_mymail_message" model="ir.actions.act_window">
+    <field name="name">Inbox</field>
+    <field name="res_model">mail.message</field>
+    <field name="domain">[('notification_ids.partner_id.user_ids', 'in', [uid])]</field>
+    <field name="search_view_id" ref="mymail_message_search"/>
+</record>
+
+<record id="action_view_mymail_message_tree" model="ir.actions.act_window.view">
+    <field eval="1" name="sequence"/>
+    <field name="view_mode">tree</field>
+    <field name="view_id" ref="mymail_message_tree"/>
+    <field name="act_window_id" ref="action_view_mymail_message"/>
+</record>
+
+<record id="action_view_mymail_message_form" model="ir.actions.act_window.view">
+    <field eval="2" name="sequence"/>
+    <field name="view_mode">form</field>
+    <field name="view_id" ref="mymail_message_form"/>
+    <field name="act_window_id" ref="action_view_mymail_message"/>
+</record>
+
 <!-- To-Do views -->
 <record id="action_view_myToDo_message" model="ir.actions.act_window">
-    <field name="name">read mail</field>
+    <field name="name">To-do</field>
     <field name="res_model">mail.message</field>
     <field name="domain">[('starred', '=', True)]</field>
     <field name="search_view_id" ref="mymail_message_search"/>
@@ -209,7 +231,7 @@
 
 <!-- To: Me views -->
 <record id="action_view_myNotification_message" model="ir.actions.act_window">
-    <field name="name">read mail</field>
+    <field name="name">To: me</field>
     <field name="res_model">mail.message</field>
     <field name="domain">[('partner_ids.user_ids', 'in', [uid])]</field>
     <field name="search_view_id" ref="mymail_message_search"/>
@@ -229,31 +251,9 @@
     <field name="act_window_id" ref="action_view_myNotification_message"/>
 </record>
 
-<!-- inbox views -->
-<record id="action_view_mymail_message" model="ir.actions.act_window">
-    <field name="name">read mail</field>
-    <field name="res_model">mail.message</field>
-    <field name="domain">[('notification_ids.partner_id.user_ids', 'in', [uid])]</field>
-    <field name="search_view_id" ref="mymail_message_search"/>
-</record>
-
-<record id="action_view_mymail_message_tree" model="ir.actions.act_window.view">
-    <field eval="1" name="sequence"/>
-    <field name="view_mode">tree</field>
-    <field name="view_id" ref="mymail_message_tree"/>
-    <field name="act_window_id" ref="action_view_mymail_message"/>
-</record>
-
-<record id="action_view_mymail_message_form" model="ir.actions.act_window.view">
-    <field eval="2" name="sequence"/>
-    <field name="view_mode">form</field>
-    <field name="view_id" ref="mymail_message_form"/>
-    <field name="act_window_id" ref="action_view_mymail_message"/>
-</record>
-
 <!-- sent views -->
 <record id="action_view_mySent_message" model="ir.actions.act_window">
-    <field name="name">read sent mail</field>
+    <field name="name">Sent</field>
     <field name="res_model">mail.message</field>
     <field name="domain">[('author_id.user_ids', 'in', [uid])]</field>
     <field name="search_view_id" ref="mymail_message_search"/>
@@ -275,7 +275,7 @@
 
 <!-- archive views -->
 <record id="action_view_myArchive_message" model="ir.actions.act_window">
-    <field name="name">read archive mail</field>
+    <field name="name">Archive</field>
     <field name="res_model">mail.message</field>
     <field name="domain">
         ['|',
