permettre de telecharger les fichiers joints via le widget many2many_kanban

--- a/views/mail_message_view.xml
+++ b/views/mail_message_view.xml
@@ -106,7 +106,7 @@
                     <group>
                         <field name="partner_ids" widget="many2many_tags" />
                         <field name="notified_partner_ids" widget="many2many_tags" />
-                        <field name="attachment_ids" widget="many2many_tags" />
+                        <field name="attachment_ids" widget="many2many_kanban" />
                     </group>
                 </group>
                 <notebook>
